Fix: Handle icyx: and icyxs:-urls